resources messup debugged and aded strawberry crop

--- a/src/main/resources/assets/matyimod/lang/en_us.json
+++ b/src/main/resources/assets/matyimod/lang/en_us.json
@@ -18,6 +18,9 @@
   "item.matyimod.sapphire_leggings": "Sapphire Leggings",
   "item.matyimod.sapphire_boots": "Sapphire Boots",
 
+  "item.matyimod.strawberry_seeds": "Strawberry Seeds",
+
+
   "tooltip.matyimod.metal_detector.tooltip": "Finds valuables underground!",
   "tooltip.matyimod.soundblock.tooltip": "Makes sweet sounds when right-clicked!",
 
