Added Flower (Catmint)

--- a/src/main/resources/assets/matyimod/lang/en_us.json
+++ b/src/main/resources/assets/matyimod/lang/en_us.json
@@ -46,5 +46,7 @@
   "block.matyimod.sapphire_wall": "Sapphire Wall",
   "block.matyimod.sapphire_door": "Sapphire Door",
 
+  "block.matyimod.catmint": "Catmint",
+
   "creativetab.matyimod_tab": "Matyi mod"
 }
