--- a/src/main/resources/assets/matyimod/lang/en_us.json
+++ b/src/main/resources/assets/matyimod/lang/en_us.json
@@ -48,5 +48,7 @@
 
   "block.matyimod.catmint": "Catmint",
 
+  "entity.minecraft.villager.matyimod.soundmaster": "Sound Master",
+
   "creativetab.matyimod_tab": "Matyi mod"
 }
